# Modular-Backtester

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
configs/: universe.yaml  universe_candidates_seed.txt  universe_smoke.yaml
data/: sector_map.csv
data/raw/: AAPL.csv  (+16 more)
docs/: data_contract.md  examples.md  prd.md  runbook.md  strategy_contract.md
factory/: .gitignore  README.md  conftest.py  cycle.py  dedup.py  filesystem.py  generate.py  loop.py  notify.py  promote.py  prompt.py  results.py  settings_loader.py  slots.py  sortino_migration.py  stages.py  sync.py  synth_ohlcv.py  validate.py
scripts/: build_hourly_dataset.py  generate_sample_data.py  screen_universe.py
strategies/: breakout_20d.py  gen_1715800000.py  gen_1778828495.py  gen_1778828761.py  gen_1778828977.py  gen_1778829071.py  gen_1778829271.py  gen_1778849817.py  gen_a1_1778882823.py  gen_a1_1778882984.py  gen_a1_1778883103.py  gen_a1_1778883238.py  gen_a1_1778883358.py  gen_a1_1778883485.py  gen_a1_1778883616.py  gen_a1_1778883706.py  gen_a1_1778883838.py  gen_a1_1778883984.py  gen_a1_1778884103.py  gen_a1_1778884240.py  gen_a1_1778884346.py  gen_a1_1778884473.py  gen_a1_1778884572.py  gen_a1_1778884705.py  gen_a1_1778884834.py  gen_a1_1778884923.py  gen_a1_1778885107.py  gen_a1_1778885270.py  gen_a1_1778885347.py  gen_a1_1778885477.py  gen_a1_1778885647.py  gen_a1_1778885763.py  gen_a1_1778885961.py  gen_a1_1778886084.py  gen_a1_1778886192.py  gen_a1_1778886363.py  gen_a1_1778886542.py  gen_a1_1778886719.py  gen_a1_1778886875.py  gen_a1_1778887000.py  (+287 more)
tests/: conftest.py
(+534 files in other folders)
