[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "modular-stock-backtester"
version = "0.3.0"
description = "Modular Python backtesting framework with WFO support"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pyyaml>=6.0",
  "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
bt-run = "backtester.runners.run_backtest:main"
bt-optimize = "backtester.runners.run_optimize:main"
bt-wfo = "backtester.runners.run_wfo:main"

[tool.setuptools.packages.find]
include = ["backtester*", "strategies*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
